--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,12 @@
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
       <button type="submit">Search</button>
     </form>
+
     <div class="gallery">
-      
+    </div>
+
+    <div>
+      <button type="button" class="load-more-btn">Load more</button>
     </div>
 
     <script src="./index.js" type="module"></script>
